fix problem dark mode

--- a/blog/css/index.css
+++ b/blog/css/index.css
@@ -37,3 +37,7 @@ main > section:has(a:first-of-type) > a > article > h1 {
     overflow: hidden;
     margin-block: 0.3rem;
 }
+
+body.dark main > section:has(a:first-of-type) > a {
+    background-color: var(--grey-54);
+}
