--- a/blog/css/page.css
+++ b/blog/css/page.css
@@ -1,7 +1,3 @@
-
-
-
-
 main > section {
     background-color: var(--white);
     border: 1px solid var(--dark-40);
@@ -183,13 +179,10 @@ body.dark main > section {
 body.dark main ~ section {
     background-color: var(--grey-54);
 }
-body.dark main ~ section time {
-    color: inherit;
-}
+
 body.dark main > section:has(figure:first-of-type) a {
     color: inherit;
 }
-
 
 @media (max-width: 1024px) {
     main ~ section {
